Propagate Optional.empty past getSelectedTargets
When the AsyncDevicesGetter machinery isn't spun up yet, it returns
Optional.empty. If it's spun up and there are no devices, it returns an
empty list.

I incorrectly mapped Optional.empty back to an empty list in
DeviceAndSnapshotComboBoxAction::getSelectedTargets. That empty list
propagated down through DevicesSelectedService and into
TargetsForReadingSupplier.

RunningDeviceTargets are persisted separately from the other ones. If a
RunningDeviceTarget was selected with the Select Multiple Devices Dialog
and Studio was restarted, the empty list (from AsyncDevicesGetter
spinning up again) made TargetsForReadingSupplier think it was no longer
running and tell DevicesSelectedService to remove it from the selection.

Bug: 273689669
Test: Not applicable
Change-Id: I4933e72b867562d7e67e40d403f73d296258f724

GitOrigin-RevId: 1b1fd87ff5dcf5f2db55901713f7a3747b23d281