@@ -19,16 +19,15 @@ import com.intellij.execution.ExecutionTarget;
 import com.intellij.execution.ExecutionTargetProvider;
 import com.intellij.execution.configurations.RunConfiguration;
 import com.intellij.openapi.project.Project;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import org.jetbrains.annotations.NotNull;
 
 public class DeviceAndSnapshotExecutionTargetProvider extends ExecutionTargetProvider {
   @NotNull
   @Override
   public List<ExecutionTarget> getTargets(@NotNull Project project, @NotNull RunConfiguration configuration) {
-    Collection<Target> targets = DeviceAndSnapshotComboBoxAction.getInstance().getSelectedTargets(project);
-    return Collections.singletonList(new DeviceAndSnapshotComboBoxExecutionTarget(targets, AsyncDevicesGetter.getInstance(project)));
+    var targets = DeviceAndSnapshotComboBoxAction.getInstance().getSelectedTargets(project).orElseGet(Set::of);
+    return List.of(new DeviceAndSnapshotComboBoxExecutionTarget(targets, AsyncDevicesGetter.getInstance(project)));
   }
 }
